update request params dishCategory dish, menu, tableSession
